--- a/README
+++ b/README
@@ -291,6 +291,10 @@ Name: 2000-12-brmsxwin
 Language: C++, Assembly Z80
 Description: A port of BrMSX to Windows, focusing on user-friendly UI.
 
+Name: 2001-08-mis
+Language: C, Assembly Z80
+Description: A variation of huffman encoding based on the MIS algorithm.
+
 Name: 2001-11-shalom
 Language: C, Assembly Z80
 Description: Translation of the game Shalom from japanese to portuguese.
