--- a/README
+++ b/README
@@ -577,3 +577,7 @@ Description: An analysis of metaprogramming techniques using C++0x.
 Name: 2011-08-doppelstern
 Language: C++
 Description: Solves the Doppelstern puzzle using exact cover and dancing links.
+
+Name: 2011-10-gotour
+Language: Go
+Description: Solutions for the exercises on go-tour.appspot.com.
