--- a/README
+++ b/README
@@ -589,3 +589,7 @@ Description: A parallel implementation of the exact cover written in Go.
 Name: 2011-11-aiclass
 Language: C++, Python
 Description: Exercises from the 2011 ai-class.com course.
+
+Name: 2012-02-spojlib
+Language: C++
+Description: Generic C++ libraries to help solving spoj problems.
