--- a/README
+++ b/README
@@ -675,4 +675,8 @@ Name: 2014-03-germantank
 Language: Python
 Description: Simulation of the german tank problem.
 
+Name: 2014-11-grabfm
+Language: TCL
+Description: Openmsx script to convert fm basic files to the vgm format.
+
 
