--- a/README
+++ b/README
@@ -683,4 +683,8 @@ Name: 2014-11-0hh1
 Language: C++
 Description: Solver for the 0hh1 puzzle using MIP.
 
+Name: 2015-01-aleste2
+Language: Assembly Z80, Python, TCL
+Description: Converts Aleste 2 from disks to a ROM files.
+
 
