google code jam 2016

--- a/README
+++ b/README
@@ -679,12 +679,16 @@ Name: 2014-11-grabfm
 Language: TCL
 Description: Openmsx script to convert fm basic files to the vgm format.
 
-Name: 2014-11-0hh1
-Language: C++
-Description: Solver for the 0hh1 puzzle using MIP.
+name: 2014-11-0hh1
+language: C++
+description: Solver for the 0hh1 puzzle using mip.
 
 Name: 2015-01-aleste2
 Language: Assembly Z80, Python, TCL
 Description: Converts Aleste 2 from disks to a ROM files.
+
+name: 2016-04-codeham
+language: C++, python
+description: Solution for google code jam 2016.
 
 
