Analytic Combinatorics totorial

--- a/README
+++ b/README
@@ -711,3 +711,7 @@ description: Script to submit solutions to spoj through the new interface.
 name: 2016-07-bozosearch
 language: python
 description: Monte Carlo simulation of the Binary Bozo Search.
+
+name: 2016-07-totorial
+language: python
+description: Monte Carlo simulation for the Analytic Combinatorics totorial.
