Pokemon GO simulation

--- a/README
+++ b/README
@@ -715,3 +715,8 @@ description: Monte Carlo simulation of the Binary Bozo Search.
 name: 2016-07-totorial
 language: python
 description: Monte Carlo simulation for the Analytic Combinatorics totorial.
+
+name: 2016-09-pokemongo
+language: python
+description: Monte Carlo simulation to estimate time required to collect all
+pokemons in Pokemon GO.
