--- a/README
+++ b/README
@@ -709,18 +709,22 @@ language: Assembly Z80
 description: Calculates 1000 digits of pi using the spigot algorithm.
 
 name: 2016-07-spojsubmit
-language: python
+language: Python
 description: Script to submit solutions to spoj through the new interface.
 
 name: 2016-07-bozosearch
-language: python
+language: Python
 description: Monte Carlo simulation of the Binary Bozo Search.
 
 name: 2016-07-totorial
-language: python
+language: Python
 description: Monte Carlo simulation for the Analytic Combinatorics totorial.
 
 name: 2016-09-pokemongo
-language: python
+language: Python
 description: Monte Carlo simulation to estimate time required to collect all
 pokemons in Pokemon GO.
+
+name: 2017-05-magicsquare
+language: C++
+description: Solves the magic square with EasySCIP.
