--- a/README
+++ b/README
@@ -732,3 +732,7 @@ description: Solves the magic square with EasySCIP.
 name: 2017-07-calculator
 language: Python
 description: Builds a two-digit calculation using only HTML.
+
+name: 2018-03-countpaths
+language: Mathematica
+description: Count the number of paths in a graph, using three different algorithms.
