--- a/README
+++ b/README
@@ -700,6 +700,10 @@ name: 2014-11-0hh1
 language: C++
 description: Solver for the 0hh1 puzzle using mip.
 
+name: 2015-04-nephew
+language: python
+description: Estimate how much of my genes are present in my nephews. 
+
 name: 2016-04-codejam
 language: C++, python
 description: Solution for google code jam 2016.
